falta que sea verdaderamente responsivo

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
         <img src="./source/icons/coding.png" alt="icon-developer" class="img">
         <span>Hugo</span>
       </div>
+      <div class="burguer">
+        <div class="burguer-line"></div>
+        <div class="burguer-line"></div>
+        <div class="burguer-line"></div>
+      </div>
       <div class="menu">
         <div class="caja">
           <a href="#Home">Home</a>
         </div>
         <div class="caja">
-          <a href="">About me</a>
+          <a href="#aboutMe">About me</a>
         </div>
         <div class="caja">
-          <a href="">Services</a>
+          <a href="#Services">Services</a>
         </div>
         <div class="caja">
           <a href="">Projects</a>
@@ -32,9 +37,9 @@
         <div class="caja">
           <a href="">Contact</a>
         </div>
-      </div>
-      <div class="cv">
-        <button>Download CV</button>
+        <div class="cv">
+          <button>Download CV</button>
+        </div>
       </div>
     </div>
   </nav>
@@ -50,12 +55,72 @@
       </div>
       <div class="foto">
         <div class="rectangulo"></div>
-        <img src="./source/img/perfil-removebg-preview.webp" alt="">
+        <img src="./source/img/newFormal.webp" alt="">
       </div>
     </div>
   </header>
   <main>
-    
+    <section id="aboutMe">
+      <div class="carrusel-container">
+        <img src="./source/img/marrime.jpg" alt="">
+      </div>
+      <div class="presentacion">
+        <h4>About Me</h4>
+        <p>I am committed to continuous learning and exploration of new technologies. Through my portfolio, I share my projects and my progress in this exciting field - welcome to my early web development journey!</p>
+        <div id="skills">
+          <div class="skill">
+            <p>HTML & CSS</p>
+            <div class="line"><div class="line-orange"></div><div class="circle"></div></div>
+          </div>
+          <div class="skill">
+            <p>JavaScript & Ecmascript 6 </p>
+            <div class="line"><div class="line-orange"></div><div class="circle"></div></div>
+          </div>
+          <div class="skill">
+            <p>React js</p>
+            <div class="line"><div class=" react "></div><div class="circle"></div></div>
+          </div>
+          <div class="skill">
+            <p>Mobile Development </p>
+            <div class="line"><div class="mobile"></div><div class="circle"></div></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="Services">
+      <h5>Services</h5>
+      <P>I provide customized and professional web development services. Using modern technologies, I will create an attractive and functional website tailored to your needs. From design to implementation, my goal is to provide you with an effective online presence that helps you achieve your objectives.</P>
+      <div class="categorias">
+        <div class="card">
+          <div class="contenedor-tarjeta">
+            <img src="./source/icons/sitemap.png" alt="frontendt">
+            <h3>frontend development</h3>
+            <p>Development of responsive and scalable web applications </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="contenedor-tarjeta">
+            <img src="./source/icons/sitemap.png" alt="frontendt">
+            <h3>Hybrids </h3>
+            <p>Hybrid application with javascript knowledge </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="contenedor-tarjeta">
+            <img src="./source/icons/sitemap.png" alt="frontendt">
+            <h3>App Development </h3>
+            <p>Mobile application development as a trainee I can only make simple applications. </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="contenedor-tarjeta">
+            <img src="./source/icons/sitemap.png" alt="frontendt">
+            <h3>Remote school support</h3>
+            <p>I help with problems that arise with front-end learning and technical services.  </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
