--- a/index.html
+++ b/index.html
@@ -1,126 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Mi portafolio personal </title>
-    <link rel="stylesheet" href="./estilos/general.css">
-</head>
-<body>
-  <nav class="nav">
-    <div class="container">
-      <div class="logo">
-        <img src="./source/icons/coding.png" alt="icon-developer" class="img">
-        <span>Hugo</span>
+    <link rel="stylesheet" href="./estilos/general.css" />
+    <link
+      href="https://unpkg.com/css.gg@2.0.0/icons/css/close-o.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav id="nav">
+      <div id="userName">
+        <h1>Hugo Hernandez</h1>
       </div>
-      <div class="burguer">
-        <div class="burguer-line"></div>
-        <div class="burguer-line"></div>
-        <div class="burguer-line"></div>
+      <div class="burger-menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
       </div>
-      <div class="menu">
-        <div class="caja">
-          <a href="#Home">Home</a>
+      <ul class="menu">
+        <div class="exit">
+          <svg
+            width="34"
+            height="34"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16.3394 9.32245C16.7434 8.94589 16.7657 8.31312 16.3891 7.90911C16.0126 7.50509 15.3798 7.48283 14.9758 7.85938L12.0497 10.5866L9.32245 7.66048C8.94589 7.25647 8.31312 7.23421 7.90911 7.61076C7.50509 7.98731 7.48283 8.62008 7.85938 9.0241L10.5866 11.9502L7.66048 14.6775C7.25647 15.054 7.23421 15.6868 7.61076 16.0908C7.98731 16.4948 8.62008 16.5171 9.0241 16.1405L11.9502 13.4133L14.6775 16.3394C15.054 16.7434 15.6868 16.7657 16.0908 16.3891C16.4948 16.0126 16.5171 15.3798 16.1405 14.9758L13.4133 12.0497L16.3394 9.32245Z"
+              fill="currentColor"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"
+              fill="currentColor"
+            />
+          </svg>
         </div>
-        <div class="caja">
-          <a href="#aboutMe">About me</a>
-        </div>
-        <div class="caja">
-          <a href="#Services">Services</a>
-        </div>
-        <div class="caja">
-          <a href="">Projects</a>
-        </div>
-        <div class="caja">
-          <a href="">Testimonials</a>
-        </div>
-        <div class="caja">
-          <a href="">Contact</a>
-        </div>
-        <div class="cv">
-          <button>Download CV</button>
-        </div>
-      </div>
-    </div>
-  </nav>
-  <header class="header" id="Home">
-    <div class="contenedor">
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <button class="btn contact">Contact me</button>
+        <button class="btn Cv">Download CV</button>
+      </ul>
+    </nav>
+    <header id="header">
       <div class="perfil">
-        <h1 class="saludo">Hi i am</h1>
-        <h2 class="name">Hugo Hernandez</h2>
-        <h3 class="deveF">Frontend </h3>
-        <h3 class="deveF second">Developer</h3>
-        <p class="parrafo">I am an early stage web development enthusiast, passionate about programming and creating digital solutions. Although I have basic knowledge in HTML, CSS and JavaScript</p>
-        <button class="hireMe">Hire me</button>
+        <img
+          src="./source/img/newFormal.webp"
+          alt="is me"
+          class="foto"
+        />
       </div>
-      <div class="foto">
-        <div class="rectangulo"></div>
-        <img src="./source/img/newFormal.webp" alt="">
+      <div class="Home">
+        <span>Hi i am</span>
+        <h1>Hugo Hernandez</h1>
+        <div class="profesion">
+          <p>Front-end <span class="barrido"></span></p>
+          <p>Developer <span class="barrido"></span></p>
+        </div>
+        <p
+          >I am an early stage web development enthusiast,
+          passionate about programming and creating digital
+          solutions. Although I have basic knowledge in
+          HTML, CSS and JavaScript</p
+        >
+        <button class="btn hireMe">HIre me</button>
       </div>
-    </div>
-  </header>
-  <main>
-    <section id="aboutMe">
-      <div class="carrusel-container">
-        <img src="./source/img/marrime.jpg" alt="">
-      </div>
-      <div class="presentacion">
-        <h4>About Me</h4>
-        <p>I am committed to continuous learning and exploration of new technologies. Through my portfolio, I share my projects and my progress in this exciting field - welcome to my early web development journey!</p>
-        <div id="skills">
-          <div class="skill">
-            <p>HTML & CSS</p>
-            <div class="line"><div class="line-orange"></div><div class="circle"></div></div>
-          </div>
-          <div class="skill">
-            <p>JavaScript & Ecmascript 6 </p>
-            <div class="line"><div class="line-orange"></div><div class="circle"></div></div>
-          </div>
-          <div class="skill">
-            <p>React js</p>
-            <div class="line"><div class=" react "></div><div class="circle"></div></div>
-          </div>
-          <div class="skill">
-            <p>Mobile Development </p>
-            <div class="line"><div class="mobile"></div><div class="circle"></div></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="Services">
-      <h5>Services</h5>
-      <P>I provide customized and professional web development services. Using modern technologies, I will create an attractive and functional website tailored to your needs. From design to implementation, my goal is to provide you with an effective online presence that helps you achieve your objectives.</P>
-      <div class="categorias">
-        <div class="card">
-          <div class="contenedor-tarjeta">
-            <img src="./source/icons/sitemap.png" alt="frontendt">
-            <h3>frontend development</h3>
-            <p>Development of responsive and scalable web applications </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="contenedor-tarjeta">
-            <img src="./source/icons/sitemap.png" alt="frontendt">
-            <h3>Hybrids </h3>
-            <p>Hybrid application with javascript knowledge </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="contenedor-tarjeta">
-            <img src="./source/icons/sitemap.png" alt="frontendt">
-            <h3>App Development </h3>
-            <p>Mobile application development as a trainee I can only make simple applications. </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="contenedor-tarjeta">
-            <img src="./source/icons/sitemap.png" alt="frontendt">
-            <h3>Remote school support</h3>
-            <p>I help with problems that arise with front-end learning and technical services.  </p>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-</body>
+    </header>
+  </body>
+  <script src="./js/burguer.js"></script>
 </html>
