--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             />
           </svg>
         </div>
-        <li><a href="#Home">Home</a></li>
+        <li><a href="#header">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Projects</a></li>
         <button class="btn contact">Contact me</button>
@@ -75,6 +75,26 @@
         <button class="btn hireMe">HIre me</button>
       </div>
     </header>
+    <main id="About">
+      <div class="pareja">
+        <img
+          src="./source/img/marrime.jpg"
+          alt="mi pareja y yo"
+          class="foto"
+        />
+      </div>
+      <div class="presentacion">
+        <h2>About Me</h2>
+        <p
+          >I am committed to continuous learning and
+          exploration of new technologies. Through my
+          portfolio, I share my projects and my progress in
+          this exciting field - welcome to my early web
+          development journey!</p
+        >
+        <div class="experiencia"> </div>
+      </div>
+    </main>
   </body>
   <script src="./js/burguer.js"></script>
 </html>
