--- a/index.html
+++ b/index.html
@@ -18,34 +18,19 @@
       <div id="userName">
         <h1>Hugo Hernandez</h1>
       </div>
-      <div class="burger-menu">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-      </div>
+      <label class="hamburger">
+        <input type="checkbox" id="burguer-menu" />
+        <svg viewBox="0 0 32 32">
+          <path
+            class="line line-top-bottom"
+            d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22"
+          ></path>
+          <path class="line" d="M7 16 27 16"></path>
+        </svg>
+      </label>
       <ul class="menu">
-        <div class="exit">
-          <svg
-            width="34"
-            height="34"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M16.3394 9.32245C16.7434 8.94589 16.7657 8.31312 16.3891 7.90911C16.0126 7.50509 15.3798 7.48283 14.9758 7.85938L12.0497 10.5866L9.32245 7.66048C8.94589 7.25647 8.31312 7.23421 7.90911 7.61076C7.50509 7.98731 7.48283 8.62008 7.85938 9.0241L10.5866 11.9502L7.66048 14.6775C7.25647 15.054 7.23421 15.6868 7.61076 16.0908C7.98731 16.4948 8.62008 16.5171 9.0241 16.1405L11.9502 13.4133L14.6775 16.3394C15.054 16.7434 15.6868 16.7657 16.0908 16.3891C16.4948 16.0126 16.5171 15.3798 16.1405 14.9758L13.4133 12.0497L16.3394 9.32245Z"
-              fill="currentColor"
-            />
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"
-              fill="currentColor"
-            />
-          </svg>
-        </div>
         <li><a href="#header">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#About">About</a></li>
         <li><a href="#">Projects</a></li>
         <button class="btn contact">Contact me</button>
         <button class="btn Cv">Download CV</button>
@@ -92,9 +77,71 @@
           this exciting field - welcome to my early web
           development journey!</p
         >
-        <div class="experiencia"> </div>
+        <div class="carde">
+          <div class="header">My Skills</div>
+          <div class="body">
+            <div class="skill">
+              <div class="skill-name">HTML</div>
+              <div class="skill-level">
+                <div class="skill-percent" id="html"></div>
+              </div>
+              <div
+                class="skill-percent-number"
+                id="html-porcentaje"
+                >90%</div
+              >
+            </div>
+            <div class="skill">
+              <div class="skill-name">CSS</div>
+              <div class="skill-level">
+                <div class="skill-percent" id="css"></div>
+              </div>
+              <div
+                class="skill-percent-number"
+                id="css-porcentaje"
+              ></div>
+            </div>
+            <div class="skill">
+              <div class="skill-name">JavaScript</div>
+              <div class="skill-level">
+                <div
+                  class="skill-percent"
+                  id="javaScript"
+                ></div>
+              </div>
+              <div
+                class="skill-percent-number"
+                id="javaScript-porcentaje"
+              ></div>
+            </div>
+            <div class="skill">
+              <div class="skill-name">React</div>
+              <div class="skill-level">
+                <div class="skill-percent" id="react"></div>
+              </div>
+              <div
+                class="skill-percent-number"
+                id="react-porcentaje"
+              ></div>
+            </div>
+            <div class="skill">
+              <div class="skill-name">Bootstrap</div>
+              <div class="skill-level">
+                <div
+                  class="skill-percent"
+                  id="bootstrap"
+                ></div>
+              </div>
+              <div
+                class="skill-percent-number"
+                id="bootstrap-porcentaje"
+              ></div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
   <script src="./js/burguer.js"></script>
+  <script src="./js/experience.js"></script>
 </html>
