--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       property="og:image"
-      content="./source/img/compartir.png"
+      content="https://jrhernandezh.github.io/personalPortafolio//source/img/compartir.png"
     />
     <meta
       name="viewport"
