inserccion de imagenes al igual que el formulario adaptativo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     />
     <title>Mi portafolio personal </title>
     <link rel="stylesheet" href="./estilos/general.css" />
+    <link
+      rel="icon"
+      href="./source/img/coding.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="shortcut icon"
+      href="./source/img/coding.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <nav id="nav">
