Ingreso de mi correo electronico

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
             />
           </svg>
           <div class="container">
-            <form class="form">
+            <form
+              class="form"
+              action="https://formspree.io/f/mvojpnkn"
+              method="POST"
+            >
               <div class="descr">Contact us</div>
               <div class="input">
                 <input
