--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                   cols="30"
                   rows="1"
                   id="message"
+                  name="message"
                 ></textarea>
                 <label for="message">Message</label>
               </div>
